# tna_transient_nutation_analysis

./: .gitignore  README.md  build_documentation.sh  classes.html  functions.html  genindex.html  gui_signals.html  gui_start.html  index.html  installation.html  objects.inv  processing_pipeline.html  processing_theory.html  pyproject.toml  search.html  searchindex.js  tutorial.html
_modules/: index.html
_modules/tna/: classes.html  functions.html
_modules/tna/gui/: gui_signals.html  start.html
_sources/: classes.rst.txt  index.rst.txt  installation.rst.txt  processing_pipeline.rst.txt  processing_theory.rst.txt  tutorial.rst.txt
_static/: custom.css  documentation_options.js
docs/source/: conf.py  functions.rst  gui_signals.rst  gui_start.rst  index.rst  installation.rst
docs/source/_templates/: class_docstring_only.rst  full_class.rst
docs/source/_templates/autosummary/: function.rst
examples/: run_by_script.py
examples/data/: 14_esenut_vs_B_LV_trinagulene_2-5mM_5eq_14dB_VG9_noAmp_h4n2_120K.DSC  14_esenut_vs_B_LV_trinagulene_2-5mM_5eq_14dB_VG9_noAmp_h4n2_120K.DTA
src/tna/: GUI.py  classes.py  functions.py  ordnung.py  run_by_script.py  start.py  style.mplstyle
src/tna/gui/: GUI.py  MainWindow.ui  gui_signals.py  start.py
