[project]
name = "tna"
version = "0.1.0"
description = "Transient Nutation Analyser for EPR spectroscopy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "scipy",
    "statsmodels",
    "PyQt5"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tna*"]

[project.scripts]
tna = "tna.start:main"
