[project]
name = "transient-nutation-analysis"
version = "1.0.0"
description = "Transient Nutation Analyser for EPR spectroscopy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib~=3.10",
    "scipy~=1.17",
    "statsmodels~=0.14",
    "PyQt6~=6.10",
    "pydantic~=2.12"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tna*"]

[project.scripts]
tna-gui = "tna.gui.start:main"
